<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_screen"
        app:layout_constraintBottom_toTopOf="@id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_square"/>

        <ImageView
            android:id="@+id/ic_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_home" />

        <TextView
            android:id="@+id/smart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.In.Home"
            app:layout_constraintTop_toBottomOf="@id/ic_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/smart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.In.Home"
            app:layout_constraintTop_toBottomOf="@id/smart"
            app:layout_constraintEnd_toEndOf="@id/smart"
            android:text="@string/home"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            style="@style/Edit.Text.Style"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/Edit.Text.Style"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="60dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_btn_login"
        android:fontFamily="@font/snfs_regular"
        android:onClick="login"
        android:paddingHorizontal="60dp"
        android:paddingVertical="10dp"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/don_t_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/snfs_regular"
            android:text="@string/don_t_have"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:fontFamily="@font/snfs_regular"
            android:text="@string/crete"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/don_t_have"
            app:layout_constraintTop_toBottomOf="@id/don_t_have" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>